# leetcode_practice

./:  postorderTraversal.cpp  .clangd  .gitignore  AlienOrder.cpp  CMakeCache.txt  CMakeLists.txt  KthLargest.cpp  MyCalendar.hpp  NumArray.cpp  NumMatrix.cpp  PredictTheWinner.cpp  README.md  a  a.cpp  addBinary.cpp  addDigits.cpp  alertNames.cpp  alphabetBoardPath.cpp  basicCalculatorIV.cpp  bestHand.cpp  buddyStrings.cpp  bulbSwitch.cpp  calculate.cpp  canArrange.cpp  canFinish.cpp  canMeasureWater.cpp  carPooling.cpp  checkInclusion.cpp  checkPowersOfThree.cpp  checkSubarraySum.cpp  circularPermutation.cpp  climbStairs.cpp  cloneGraph.cpp  combine.cpp  complexNumberMultiply.cpp  connect.cpp  containsNearbyAlmostDuplicat.cpp  convert.cpp  copyRandomList.cpp  corpFlightBookings.cpp  (+129 more)
.history/: .gitignore_20210825232740  .gitignore_20210825233000  .gitignore_20210825233040  .gitignore_20210830145829  .gitignore_20210907222831  AlienOrder_20220530115039.cpp  AlienOrder_20220530132511.cpp  AlienOrder_20220530132620.cpp  AlienOrder_20220530132914.cpp  AlienOrder_20220530134440.cpp  AlienOrder_20220530135403.cpp  AlienOrder_20220530142841.cpp  AlienOrder_20220530183132.cpp  AlienOrder_20220530184204.cpp  AlienOrder_20220530184349.cpp  AlienOrder_20220530184731.cpp  AlienOrder_20220530185019.cpp  AlienOrder_20220530185401.cpp  AlienOrder_20220530185531.cpp  CMakeLists_20210824114515.txt  CMakeLists_20210824114643.txt  CMakeLists_20210824114651.txt  CMakeLists_20210824114656.txt  CMakeLists_20210824114700.txt  CMakeLists_20210824114703.txt  CMakeLists_20210824114735.txt  CMakeLists_20210824115646.txt  CMakeLists_20210824115704.txt  CMakeLists_20210824115753.txt  CMakeLists_20210824115811.txt  CMakeLists_20211002012232.txt  KthLargest_20220919113830.hpp  KthLargest_20220919114122.hpp  KthLargest_20220919114704.cpp  KthLargest_20220919120912.cpp  KthLargest_20220919121044.cpp  KthLargest_20220919121430.cpp  KthLargest_20220919121439.cpp  KthLargest_20220919121444.cpp  KthLargest_20220919121449.cpp  (+5610 more)
.history/amazon_list/: LRUCache_20220714112841.cpp  LRUCache_20220714113536.cpp  LRUCache_20220714113819.cpp  LRUCache_20220714123215.cpp
.history/inherence/: animal_20210930162730.cpp  animal_20210930162744.cpp  animal_20210930162753.cpp  animal_20210930162806.cpp  animal_20210930162823.cpp  animal_20210930162913.cpp  animal_20210930165103.cpp  animal_20210930165111.cpp  animal_20210930165120.cpp
.history/jianzhi_offer/: CQueue_20220707110416.cpp  CQueue_20220707110706.cpp  CQueue_20220707110808.cpp  findRepeatNumber_20220706163122.cpp  findRepeatNumber_20220706163339.cpp  minStack_20220707111539.cpp  minStack_20220707111910.cpp  minStack_20220707112326.cpp  minStack_20220707112652.cpp  minStack_20220707113040.cpp  minStack_20220707113048.cpp  minStack_20220707113100.cpp  minStack_20220707113248.cpp  minStack_20220707114147.cpp  minStack_20220707114322.cpp  minStack_20220707114341.cpp  minStack_20220707114432.cpp  minStack_20220707114558.cpp  minStack_20220707114657.cpp  minStack_20220707114715.cpp  minStack_20220707114801.cpp  minStack_20220707114911.cpp  minStack_20220707114927.cpp  minStack_20220707115011.cpp  minStack_20220707115219.cpp  minStack_20220707115333.cpp  minStack_20220707115420.cpp  temp_20220707112820.cpp  temp_20220707112925.cpp  temp_20220707113249.cpp  temp_20220707114155.cpp  temp_20220707114241.cpp  temp_20220707114250.cpp  temp_20220707114411.cpp  temp_20220707114447.cpp  temp_20220707114822.cpp
.history/src/: header_20210725152036.h  header_20210725153016.h  header_20210725153035.h  header_20210725153758.h  header_20210823102252.h  main_20210725151638.cpp  main_20210725152036.cpp  main_20210725152045.cpp  main_20210725152134.cpp  main_20210725152235.cpp  main_20210725152506.cpp  main_20210725152540.cpp  main_20210725153116.cpp  main_20210725153903.cpp  main_20210725154227.cpp  main_20210725154328.cpp  main_20210725200707.cpp  main_20210725200735.cpp  main_20210725200750.cpp  main_20210725203624.cpp  main_20210725203658.cpp  main_20210725231043.cpp  main_20210725232050.cpp  main_20210811112515.cpp  main_20210823102234.cpp  main_20210823102343.cpp  main_20210823102521.cpp  main_20210823102547.cpp  main_20210823102609.cpp  sanshuzhihe_20210725152443.cpp  sanshuzhihe_20210725153204.cpp  sanshuzhihe_20210725153244.cpp  sanshuzhihe_20210725153322.cpp  sanshuzhihe_20210725153337.cpp  sanshuzhihe_20210725153624.cpp  threesum_20210725153749.h  threesum_20210725153832.h  threesum_20210725200826.h  threesum_20210725200857.h  threesum_20210725200917.h  (+1 more)
amazon_list/: LRUCache.cpp
include/: LFUCache.h  data_structure.h  header.h  printer.h
jianzhi_offer/: temp.cpp
main.dSYM/Contents/Resources/DWARF/: main
src/: AuthenticationManager.hpp  CMakeLists.txt  CountIntervals.cpp  MyCircularDeque.cpp  MyCircularQueue.cpp  PredictTheWinner.cpp  RangeModule.cpp  Twitter.cpp  addStrings.cpp  addTwoNumbers.cpp  alertNames.cpp  arrangeCoins.cpp  asteroidCollision.cpp  balancedString.cpp  basicCalculatorIV.cpp  binaryTreePaths.cpp  braceExpansionII.cpp  bubblesort.cpp  calculate.cpp  canChange.cpp  canCompleteCircuit.cpp  canIWin.cpp  canJump.cpp  canMeasureWater.cpp  canPartition.cpp  canTransform.cpp  capitalizeTitle.cpp  captureForts.cpp  carPooling.cpp  champagneTower.cpp  characterReplacement.cpp  characterReplacement1.cpp  check.cpp  checkInclusion.cpp  cherryPickup.cpp  circularGameLosers.cpp  cloneGraph.cpp  coinChange.cpp  combinationSum.cpp  combinationSum3.cpp  (+282 more)
test/: CMakeLists.txt  test.cpp
test.dSYM/Contents/Resources/DWARF/: test
